k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cal-app
  namespace: cal
  labels:
    app: cal
spec:
  type: ClusterIP
  selector:
    app: cal
  ports:
    - port: 8501
      targetPort: 8501
      protocol: TCP
      name: http
